--- a/src/app/App.css
+++ b/src/app/App.css
@@ -40,6 +40,11 @@
   display: flex;
 }
 
+.button.disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
 .button:hover {
   background-color: #1E88E5;
 }
