--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -60,6 +60,10 @@
   color: #000;
 }
 
+.input .meta .value span {
+  font-size: 8px;
+}
+
 .input .error {
   position: absolute;
   font-weight: 400;
