--- a/src/containers/Settings/Settings.css
+++ b/src/containers/Settings/Settings.css
@@ -39,12 +39,28 @@
 .settings .toggle-save {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #fff;
-  margin-bottom: 16px;
+  flex-direction: column;
   border-radius: 6px;
-  align-items: center;
-  padding: 0 14px;
   display: flex;
-  height: 40px;
+  
+  margin-bottom: 16px;
+  padding: 10px 0;
+}
+
+.settings .toggle-save .input.password {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  border-radius: 0;
+  padding-top: 10px;
+  margin-top: 8px;
+}
+
+.settings .toggle-save .input.password input:focus {
+  background-color: transparent;
+}
+
+.settings .toggle-save .checkbox {
+  margin: 0 14px;
 }
 
 .settings .toggle-save .checkbox span {
