--- a/src/containers/Credentials/Item/Item.css
+++ b/src/containers/Credentials/Item/Item.css
@@ -1,4 +1,4 @@
-.item {
+.item.credential {
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   align-items: center;
   padding: 0 14px;
@@ -8,7 +8,7 @@
   height: 50px;
 }
 
-.item .details {
+.item.credential .details {
   flex-direction: column;
   flex-wrap: wrap;
   display: flex;
@@ -16,32 +16,32 @@
   flex: 1;
 }
 
-.item .details .field {
+.item.credential .details .field {
   font-size: 12px;
   margin-top: 4px;
   display: flex;
   width: 200px;
 }
 
-.item .details .field span {
+.item.credential .details .field span {
   text-overflow: ellipsis;
   overflow-x: hidden;
   margin-left: 8px;
   max-width: 140px;
 }
 
-.item .details .field strong {
+.item.credential .details .field strong {
   display: inline-block;
   user-select: none;
   min-width: 60px;
   opacity: 0.7;
 }
 
-.item .actions {
+.item.credential .actions {
   display: flex;
 }
 
-.item .actions .action {
+.item.credential .actions .action {
   border: 1px solid rgba(0,0,0,0.1);
   background-color: transparent;
   border-radius: 50%;
@@ -50,15 +50,15 @@
   width: 30px;
 }
 
-.item .actions .action:hover {
+.item.credential .actions .action:hover {
   background-color: rgba(0,0,0,0.1);
 }
 
-.item .actions .action svg {
+.item.credential .actions .action svg {
   height: 15px;
   width: 15px;
 }
 
-.item .actions .action:first-child {
+.item.credential .actions .action:first-child {
   margin-right: 8px;
 }
