--- a/src/containers/Forms/Credentials/Create/Create.css
+++ b/src/containers/Forms/Credentials/Create/Create.css
@@ -1,4 +1,4 @@
-.create-form {
+.create-form.credential {
   flex-direction: column;
   padding: 14px 16px;
   position: relative;
@@ -7,7 +7,7 @@
   width: 100%;
 }
 
-.create-form.loading .overlay {
+.create-form.credential.loading .overlay {
   justify-content: center;
   align-items: center;
   display: flex;
@@ -22,38 +22,38 @@
   top: 0;
 }
 
-.create-form.loading .fields, .create-form.loading .button {
+.create-form.credential.loading .fields, .create-form.credential.loading .button {
   filter: blur(8px);
 }
 
-.create-form .fields {
+.create-form.credential .fields {
   flex-direction: column;
   display: flex;
   flex: 1;
 }
 
-.create-form .input {
+.create-form.credential .input {
   border: 1px solid rgba(0, 0, 0, 0.05);
   margin-bottom: 14px;
 }
 
-.create-form .actions {
+.create-form.credential .actions {
   justify-content: flex-end;
   display: flex;
 }
 
-.create-form .button.create {
+.create-form.credential .button.create {
   background-color: #EEEEEE;
   color: #000;
   height: 40px;
   width: 100%;
 }
 
-.create-form .button.create:hover {
+.create-form.credential .button.create:hover {
   background-color: #E0E0E0;
 }
 
-.create-form .button.disabled {
+.create-form.credential .button.disabled {
   background-color: #EEEEEE;
   color: #000;
   height: 40px;
@@ -63,6 +63,6 @@
   opacity: 0.4;
 }
 
-.create-form .button.disabled:hover {
+.create-form.credential .button.disabled:hover {
   background-color: #E0E0E0;
 }
